src2/objects/Sales_Org_Telemetry__c.object
<CustomObject>
    <description>Extension of Sales Org to add fields on it.</description>
    <fields>
        <fullName>Days__c</fullName>
        <label>Consumption Calculation Period (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EnableAutomaticReplenishment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Automatic Replenishment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increment__c</fullName>
        <formula>(((2*(1/Days__c))-((1/Days__c)/SlopeIndicator__c))-((1/Days__c)/SlopeIndicator__c))/(Days__c-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Increment</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimitOfDaysWithoutConnection__c</fullName>
        <inlineHelpText>Duration without connection limit before an alarm is sent to the connectivity manager</inlineHelpText>
        <label>Limit of days without connection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit_of_days__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Duration without contract before Events, Notable Events, Tasks and Logs are deleted</inlineHelpText>
        <label>Limit of days without contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MarketCrcEmail__c</fullName>
        <label>Market CRC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MarketProcessingTime__c</fullName>
        <label>Market Processing Time (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoConnectionPostInstallationDays__c</fullName>
        <label>No connection post installation days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOrgType__c</fullName>
        <label>Sales Org Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Organization</label>
        <referenceTo>Sales_Org__c</referenceTo>
        <relationshipLabel>Sales Orgs Telemetry</relationshipLabel>
        <relationshipName>Sales_Orgs_Telemetry</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SlopeIndicator__c</fullName>
        <label>Slope Indicator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrustedAgent__c</fullName>
        <label>Trusted Agent</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidOrderSize__c</fullName>
        <inlineHelpText>All posibilities to choose the values for an order size. The field should to be done for a list of ordered from lowest to highest values (e.g.) 1,2,4,8,12,#6 (#means that the last value could be incremented 6 to 6)</inlineHelpText>
        <label>Valid Order Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Org Telemetry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Org Ext Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orgs Telemetry</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>